--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "main": "index.js",
   "scripts": {
     "start": "vite",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "vite build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "nathanrydel",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "gh-pages": "^6.2.0",
     "sass": "^1.80.0",
     "vite": "^5.4.9"
   },
